--- a/.github/workflows/python_code_caching.yml
+++ b/.github/workflows/python_code_caching.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repository.
+      # Checkout repository
       - name: Check out code
         uses: actions/checkout@v4
 
